Make all predicate pushdown enhancement changes java8 compliant